use Integer.valueOf()
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2102 ba0df5e5-9053-6d9f-941f-f112716aa91a